--- a/main.html
+++ b/main.html
@@ -9,6 +9,58 @@
 </head>
 <body>
     <!-- add table here -->
+	<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>CBSE Result Sheet</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+  <table border='1' cellpadding='10' cellspacing='0'>
+    <caption>CBSE Class 10 Result - 2025</caption>
+    <thead>
+      <tr>
+        <th>Roll No</th>
+        <th>Name</th>
+        <th>Maths</th>
+        <th>Science</th>
+        <th>English</th>
+        <th>Total</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>101</td>
+        <td>Ismail</td>
+        <td>95</td>
+        <td>88</td>
+        <td>90</td>
+        <td>273</td>
+      </tr>
+      <tr>
+        <td>102</td>
+        <td>Ayesha</td>
+        <td>89</td>
+        <td>92</td>
+        <td>85</td>
+        <td>266</td>
+      </tr>
+      <tr>
+        <td>103</td>
+        <td>Rahul</td>
+        <td>76</td>
+        <td>81</td>
+        <td>78</td>
+        <td>235</td>
+      </tr>
+    </tbody>
+  </table>
+
+</body>
+</html>
+
 
         
 </body>
